added a post on NG2 cells

--- a/_posts/2013-04-22-anxiety-and-stress-how-do-we-process-it.html
+++ b/_posts/2013-04-22-anxiety-and-stress-how-do-we-process-it.html
@@ -15,7 +15,7 @@ type: post
 published: true
 meta:
   _publicize_pending: '1'
-  tagazine-media: a:7:{s:7:"primary";s:0:"";s:6:"images";a:1:{s:55:"http://deleresk.files.wordpress.com/2013/04/anxiety.gif";a:6:{s:8:"file_url";s:55:"http://deleresk.files.wordpress.com/2013/04/anxiety.gif";s:5:"width";i:279;s:6:"height";i:193;s:4:"type";s:5:"image";s:4:"area";i:53847;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:1;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-04-22
+  tagazine-media: a:7:{s:7:"primary";s:0:"";s:6:"images";a:1:{s:55:"https://deleresk.files.wordpress.com/2013/04/anxiety.gif";a:6:{s:8:"file_url";s:55:"https://deleresk.files.wordpress.com/2013/04/anxiety.gif";s:5:"width";i:279;s:6:"height";i:193;s:4:"type";s:5:"image";s:4:"area";i:53847;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:1;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-04-22
     10:45:15";}
   _oembed_eeeae2ce7538aa8f2b06e0fe2824e791: '{{unknown}}'
   _oembed_8fa215f0fcd8a2f1c78fd83271909458: '{{unknown}}'
@@ -38,6 +38,6 @@ author:
 <p>While bi-directional and complex, understanding how we use these feedback loops could eventually lead us to understand our anxiety disorders better: instead of panic attacks, we could fix for ourselves improved cues or situational environments that would ameliorate our panic. Right now, the research needs to focus on which subpopulations of neurons affect what, and more importantly why these connections arise: while we might speculate a looping process of fear and anxiety coupled with learning from our fear-circumstance would allow fear-reduction, such a clear-cut neuronal feedback mechanism hasn’t yet been shown.</p>
 <br>
 <br>
-<p><a href="http://www.nature.com/nature/journal/vaop/ncurrent/full/nature12041.html" target="_blank">http://www.nature.com/nature/journal/vaop/ncurrent/full/nature12041.html</a></p>
-<p><a href="http://www.nature.com/nature/journal/vaop/ncurrent/full/nature12087.html" target="_blank">http://www.nature.com/nature/journal/vaop/ncurrent/full/nature12087.html</a></p>
-<p><a href="http://www.nature.com/nature/journal/vaop/ncurrent/full/nature12018.html" target="_blank">http://www.nature.com/nature/journal/vaop/ncurrent/full/nature12018.html</a></p>
+<p><a href="https://www.nature.com/nature/journal/vaop/ncurrent/full/nature12041.html" target="_blank">https://www.nature.com/nature/journal/vaop/ncurrent/full/nature12041.html</a></p>
+<p><a href="https://www.nature.com/nature/journal/vaop/ncurrent/full/nature12087.html" target="_blank">https://www.nature.com/nature/journal/vaop/ncurrent/full/nature12087.html</a></p>
+<p><a href="https://www.nature.com/nature/journal/vaop/ncurrent/full/nature12018.html" target="_blank">https://www.nature.com/nature/journal/vaop/ncurrent/full/nature12018.html</a></p>
