--- a/_posts/2013-05-02-the-focus-in-architecture-design.html
+++ b/_posts/2013-05-02-the-focus-in-architecture-design.html
@@ -20,12 +20,12 @@ type: post
 published: true
 meta:
   _publicize_pending: '1'
-  tagazine-media: a:7:{s:7:"primary";s:54:"http://deleresk.files.wordpress.com/2013/05/tirana.png";s:6:"images";a:2:{s:54:"http://deleresk.files.wordpress.com/2013/05/tirana.png";a:6:{s:8:"file_url";s:54:"http://deleresk.files.wordpress.com/2013/05/tirana.png";s:5:"width";i:1000;s:6:"height";i:750;s:4:"type";s:5:"image";s:4:"area";i:750000;s:9:"file_path";b:0;}s:52:"http://deleresk.files.wordpress.com/2013/05/maze.jpg";a:6:{s:8:"file_url";s:52:"http://deleresk.files.wordpress.com/2013/05/maze.jpg";s:5:"width";i:275;s:6:"height";i:184;s:4:"type";s:5:"image";s:4:"area";i:50600;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:2;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-05-02
+  tagazine-media: a:7:{s:7:"primary";s:54:"https://deleresk.files.wordpress.com/2013/05/tirana.png";s:6:"images";a:2:{s:54:"https://deleresk.files.wordpress.com/2013/05/tirana.png";a:6:{s:8:"file_url";s:54:"https://deleresk.files.wordpress.com/2013/05/tirana.png";s:5:"width";i:1000;s:6:"height";i:750;s:4:"type";s:5:"image";s:4:"area";i:750000;s:9:"file_path";b:0;}s:52:"https://deleresk.files.wordpress.com/2013/05/maze.jpg";a:6:{s:8:"file_url";s:52:"https://deleresk.files.wordpress.com/2013/05/maze.jpg";s:5:"width";i:275;s:6:"height";i:184;s:4:"type";s:5:"image";s:4:"area";i:50600;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:2;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-05-02
     12:05:46";}
-  _oembed_4fa7e57f8fdca1cb99b852f7160c5adf: <div class="embed-ted"><iframe src="http://embed.ted.com/talks/julian_treasure_why_architects_need_to_use_their_ears.html"
+  _oembed_4fa7e57f8fdca1cb99b852f7160c5adf: <div class="embed-ted"><iframe src="https://embed.ted.com/talks/julian_treasure_why_architects_need_to_use_their_ears.html"
     width="630" height="945" frameborder="0" scrolling="no" webkitAllowFullScreen
     mozallowfullscreen allowFullScreen></iframe></div>
-  _oembed_df99f7d7b9cf62beca8b69e4e38dbe81: <div class="embed-ted"><iframe src="http://embed.ted.com/talks/edi_rama_take_back_your_city_with_paint.html"
+  _oembed_df99f7d7b9cf62beca8b69e4e38dbe81: <div class="embed-ted"><iframe src="https://embed.ted.com/talks/edi_rama_take_back_your_city_with_paint.html"
     width="630" height="945" frameborder="0" scrolling="no" webkitAllowFullScreen
     mozallowfullscreen allowFullScreen></iframe></div>
 author:
@@ -53,8 +53,8 @@ author:
 <br>
 <br>
 <p>References:</p>
-<p>TED: <a href="http://www.ted.com/talks/julian_treasure_why_architects_need_to_use_their_ears.html">http://www.ted.com/talks/julian_treasure_why_architects_need_to_use_their_ears.html</a></p>
-<p><a href="http://www.ted.com/talks/edi_rama_take_back_your_city_with_paint.html">http://www.ted.com/talks/edi_rama_take_back_your_city_with_paint.html</a></p>
+<p>TED: <a href="https://www.ted.com/talks/julian_treasure_why_architects_need_to_use_their_ears.html">https://www.ted.com/talks/julian_treasure_why_architects_need_to_use_their_ears.html</a></p>
+<p><a href="https://www.ted.com/talks/edi_rama_take_back_your_city_with_paint.html">https://www.ted.com/talks/edi_rama_take_back_your_city_with_paint.html</a></p>
 <p>Arnold, A. E. G. F., Burles, F., Krivoruchko, T., Liu, I., Rey, C. D., Levy, R. M., &amp; Iaria, G. (2013). Cognitive mapping in humans and its relationship to other orientation skills. <i>Experimental brain research. Experimentelle Hirnforschung. Expérimentation cérébrale</i>, <i>224</i>(3), 359–72. doi:10.1007/s00221-012-3316-0</p>
 <p>Barton, K. R., Valtchanov, D., &amp; Ellard, C. (2012). Seeing Beyond Your Visual Field: The Influence of Spatial Topology and Visual Field on Navigation Performance. <i>Environment and Behavior</i>. doi:10.1177/0013916512466094</p>
 <p>Frank, R., Park, A. J., Brantingham, P. L., Clare, J., Wuschke, K., &amp; Vajihollahi, M. (2010). Identifying High Risk Crime Areas using Topology, (2003), 13–18.</p>
