--- a/_posts/2013-05-23-kinesthetics.html
+++ b/_posts/2013-05-23-kinesthetics.html
@@ -16,7 +16,7 @@ type: post
 published: true
 meta:
   _publicize_pending: '1'
-  tagazine-media: a:7:{s:7:"primary";s:64:"http://deleresk.files.wordpress.com/2013/05/medical_students.jpg";s:6:"images";a:3:{s:71:"http://deleresk.files.wordpress.com/2013/05/8228670626_f26680b005_c.jpg";a:6:{s:8:"file_url";s:71:"http://deleresk.files.wordpress.com/2013/05/8228670626_f26680b005_c.jpg";s:5:"width";i:800;s:6:"height";i:600;s:4:"type";s:5:"image";s:4:"area";i:480000;s:9:"file_path";b:0;}s:64:"http://deleresk.files.wordpress.com/2013/05/medical_students.jpg";a:6:{s:8:"file_url";s:64:"http://deleresk.files.wordpress.com/2013/05/medical_students.jpg";s:5:"width";i:1600;s:6:"height";i:1200;s:4:"type";s:5:"image";s:4:"area";i:1920000;s:9:"file_path";b:0;}s:65:"http://deleresk.files.wordpress.com/2013/05/tango-entre-homme.jpg";a:6:{s:8:"file_url";s:65:"http://deleresk.files.wordpress.com/2013/05/tango-entre-homme.jpg";s:5:"width";i:1529;s:6:"height";i:991;s:4:"type";s:5:"image";s:4:"area";i:1515239;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:3;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-05-23
+  tagazine-media: a:7:{s:7:"primary";s:64:"https://deleresk.files.wordpress.com/2013/05/medical_students.jpg";s:6:"images";a:3:{s:71:"https://deleresk.files.wordpress.com/2013/05/8228670626_f26680b005_c.jpg";a:6:{s:8:"file_url";s:71:"https://deleresk.files.wordpress.com/2013/05/8228670626_f26680b005_c.jpg";s:5:"width";i:800;s:6:"height";i:600;s:4:"type";s:5:"image";s:4:"area";i:480000;s:9:"file_path";b:0;}s:64:"https://deleresk.files.wordpress.com/2013/05/medical_students.jpg";a:6:{s:8:"file_url";s:64:"https://deleresk.files.wordpress.com/2013/05/medical_students.jpg";s:5:"width";i:1600;s:6:"height";i:1200;s:4:"type";s:5:"image";s:4:"area";i:1920000;s:9:"file_path";b:0;}s:65:"https://deleresk.files.wordpress.com/2013/05/tango-entre-homme.jpg";a:6:{s:8:"file_url";s:65:"https://deleresk.files.wordpress.com/2013/05/tango-entre-homme.jpg";s:5:"width";i:1529;s:6:"height";i:991;s:4:"type";s:5:"image";s:4:"area";i:1515239;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:3;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-05-23
     13:37:41";}
 author:
 ---
@@ -27,7 +27,7 @@ author:
 <p>Recently I came across “kinesthetic learning” whilst lazily browsing through a dance blog. Not my usual ground for foraging scientific thoughts – and I thought little of it at first. I was far too busy discovering that “Nirvana” isn’t just a band I loved, but also “a place beyond suffering” (I should have guessed, really), that “Dharma” isn’t just a suspicious project on TV’s LOST (it’s something to do with spiritual teachings), and that the Persians have four levels of friendship (akin perhaps to the Greek’s three states of love). Kinesthetic learning meanwhile, was made to sound like a beatific combination of movement, mysticism and tantric dance – a brain-based homage to Pele, the Hawaiian goddess known for her fiery, creative passion.</p>
 <br>
 <figure style="text-align:center;">
-  <a href="http://www.flickr.com/photos/taylorandayumi/">
+  <a href="https://www.flickr.com/photos/taylorandayumi/">
     <img src="images/8228670626_f26680b005_c.jpg" width="455" height="342" /></a>
     <figcaption>Pele by Taylorandayumi <figcaption>
 </figure>
@@ -36,7 +36,7 @@ author:
 <p>&nbsp;</p>
 <br>
 <figure style="text-align:center;">
-  <a href="http://upload.wikimedia.org/wikipedia/commons/d/d4/Medical_Students.jpg">
+  <a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Medical_Students.jpg">
     <img src="images/medical_students.jpg" width="520" height="390" /></a>
 </figure>
 </br>
@@ -46,7 +46,7 @@ author:
 <p>Less clinically, studies of kinaesthetic empathy<sup>3</sup>: that is, our feeling of “experiencing” the dance for ourselves whilst watching a performance has had interesting applications for not only the neural bases for emotion<sup>4</sup> but for helping treat diseases such as autism<sup>5</sup>. Linking the phenomenological idea of intersubjectivity (the engagement of the self with the others around you) with neuroscience by our mirror neuron system, we can examine how a sensory interaction with others activates various sensorymotor regions of our own brains. So, psychopathic tendencies for example are associated with decreased motor empathy in the mirror neuron system as opposed to normal subjects whose “pain areas” activate upon watching harrowing footage<sup>6</sup>.</p>
 <br>
 <figure style="text-align:center;">
-  <a href="https://upload.wikimedia.org/wikipedia/commons/9/99/Tango-entre-homme.jpg">
+  <a href="httpss://upload.wikimedia.org/wikipedia/commons/9/99/Tango-entre-homme.jpg">
     <img src="images/tango-entre-homme.jpg" width="520" height="337" /></a>
 </figure>
 </br>
