--- a/_posts/2013-06-14-endorphins-how-crucial-are-they.html
+++ b/_posts/2013-06-14-endorphins-how-crucial-are-they.html
@@ -18,7 +18,7 @@ type: post
 published: true
 meta:
   _publicize_pending: '1'
-  tagazine-media: a:7:{s:7:"primary";s:71:"http://deleresk.files.wordpress.com/2013/06/8385591214_600cb9598d_o.jpg";s:6:"images";a:4:{s:71:"http://deleresk.files.wordpress.com/2013/06/8385591214_600cb9598d_o.jpg";a:6:{s:8:"file_url";s:71:"http://deleresk.files.wordpress.com/2013/06/8385591214_600cb9598d_o.jpg";s:5:"width";i:3888;s:6:"height";i:2592;s:4:"type";s:5:"image";s:4:"area";i:10077696;s:9:"file_path";b:0;}s:70:"http://deleresk.files.wordpress.com/2013/06/locationofhypothalamus.jpg";a:6:{s:8:"file_url";s:70:"http://deleresk.files.wordpress.com/2013/06/locationofhypothalamus.jpg";s:5:"width";i:350;s:6:"height";i:250;s:4:"type";s:5:"image";s:4:"area";i:87500;s:9:"file_path";b:0;}s:71:"http://deleresk.files.wordpress.com/2013/06/2907506894_e1aea368bf_o.jpg";a:6:{s:8:"file_url";s:71:"http://deleresk.files.wordpress.com/2013/06/2907506894_e1aea368bf_o.jpg";s:5:"width";i:853;s:6:"height";i:1280;s:4:"type";s:5:"image";s:4:"area";i:1091840;s:9:"file_path";b:0;}s:71:"http://deleresk.files.wordpress.com/2013/06/2605051579_cfc36c9b43_z.jpg";a:6:{s:8:"file_url";s:71:"http://deleresk.files.wordpress.com/2013/06/2605051579_cfc36c9b43_z.jpg";s:5:"width";i:640;s:6:"height";i:480;s:4:"type";s:5:"image";s:4:"area";i:307200;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:4;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-06-14
+  tagazine-media: a:7:{s:7:"primary";s:71:"https://deleresk.files.wordpress.com/2013/06/8385591214_600cb9598d_o.jpg";s:6:"images";a:4:{s:71:"https://deleresk.files.wordpress.com/2013/06/8385591214_600cb9598d_o.jpg";a:6:{s:8:"file_url";s:71:"https://deleresk.files.wordpress.com/2013/06/8385591214_600cb9598d_o.jpg";s:5:"width";i:3888;s:6:"height";i:2592;s:4:"type";s:5:"image";s:4:"area";i:10077696;s:9:"file_path";b:0;}s:70:"https://deleresk.files.wordpress.com/2013/06/locationofhypothalamus.jpg";a:6:{s:8:"file_url";s:70:"https://deleresk.files.wordpress.com/2013/06/locationofhypothalamus.jpg";s:5:"width";i:350;s:6:"height";i:250;s:4:"type";s:5:"image";s:4:"area";i:87500;s:9:"file_path";b:0;}s:71:"https://deleresk.files.wordpress.com/2013/06/2907506894_e1aea368bf_o.jpg";a:6:{s:8:"file_url";s:71:"https://deleresk.files.wordpress.com/2013/06/2907506894_e1aea368bf_o.jpg";s:5:"width";i:853;s:6:"height";i:1280;s:4:"type";s:5:"image";s:4:"area";i:1091840;s:9:"file_path";b:0;}s:71:"https://deleresk.files.wordpress.com/2013/06/2605051579_cfc36c9b43_z.jpg";a:6:{s:8:"file_url";s:71:"https://deleresk.files.wordpress.com/2013/06/2605051579_cfc36c9b43_z.jpg";s:5:"width";i:640;s:6:"height";i:480;s:4:"type";s:5:"image";s:4:"area";i:307200;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:4;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-06-14
     19:08:47";}
 author:
 ---
@@ -36,7 +36,7 @@ author:
 <p>Endorphins are released by the pituitary gland, a tiny pea-sized organ in your brain protruding off your hypothalamus. This gland gives off 9 hormones to regulate your body’s homeostasis, including hormones such as oxytocin which plays a role in emotional bonding, trust and sexual arousal, and growth hormone which stimulates your growth and cell division<sup>1</sup>. Endorphins are also essentially produced by hypothalamic neurons via a cleaved product of pro-opiomelanocortin, a rather complex gene that also produces sister peptides α-MSH and ACTH, regulating appetite/sexual behaviour and immune response respectively<sup>2</sup>. Being the cultural buff, you will probably have heard the term “endorphin rush” in numerous films and books – the feeling of wellbeing and positivity that results from doing something difficult, dangerous or exciting. Equal to this, being an opioid peptide endorphin is produced following stressors such as pain, stress and even alcohol<sup>3</sup> <sup>4</sup>. It binds to opioid receptors much like morphine does, inhibiting key proteins involved in the transmission of pain. A vital addendum to this, β-endorphin, taking centre stage in the production “Endorphin” (TBA in all gothic West End dramas) binds at mu-opioid receptors in the central nervous system, inhibiting the chief neurotransmitter GABA and so creating the excess of dopamine that gives you a rush of pleasure<sup>1</sup>.</p>
 <br>
 <figure style="text-align:center;">
-  <a href="http://commons.wikimedia.org/wiki/File:LocationOfHypothalamus.jpg">
+  <a href="https://commons.wikimedia.org/wiki/File:LocationOfHypothalamus.jpg">
     <img src="images/locationofhypothalamus.jpg" width="350" height="250" /></a>
 </figure>
 </br>
@@ -45,7 +45,7 @@ author:
 <p>Luckily while scientific research follows an oblique route, we still get results. One of the most exciting connections in the β-endorphin research world revolves around the mediation of stress, β-endorphin response and our immune system. Hans Selye, a pioneer in endocrinology in the early 1900’s said something that in truth is quite foretelling – “Every stress leaves an indelible scar, and the organism pays for its survival after a stressful situation by becoming a little older”. While we live in a world that is slowly demanding ever more productivity and juggling finesse, stress plays a significant role in changing our bodies on the micro scale. Stress has been shown not only to be a madness-inducing riot as evidenced by Jerry Springer’s extraordinary guests, but general neurophysiological stress has been shown to dampen our immune system, and promote progression and growth of cancerous cells<sup>7</sup>.</p>
 <br>
 <figure style="text-align:center;">
-  <a href="http://www.flickr.com/photos/rveldwijk/2907506894/">
+  <a href="https://www.flickr.com/photos/rveldwijk/2907506894/">
     <img src="images/2907506894_e1aea368bf_o.jpg" width="441" height="662" /></a>
     <figcaption>Photo by Robbie Veldwijk, click for flickr link <figcaption>
 </figure>
@@ -55,7 +55,7 @@ author:
 <p>That’s a good enough biological excuse for me.</p>
 <br>
 <figure style="text-align:center;">
-  <a href="http://www.flickr.com/photos/sequitography/2605051579/">
+  <a href="https://www.flickr.com/photos/sequitography/2605051579/">
     <img src="images/2605051579_cfc36c9b43_z.jpg" width="630" height="472" /></a>
     <figcaption>Fantastic disguise by Seth Thomas Rasmussen :)</figcaption>
 </figure>
