--- a/_posts/2013-10-05-the-city-never-sleeps-but-we-need-to.html
+++ b/_posts/2013-10-05-the-city-never-sleeps-but-we-need-to.html
@@ -19,7 +19,7 @@ author:
 <p>We’ve been brought up to believe sleep is a necessary but avoidable luxury – Watching Grey’s Anatomy, Mad Men, 24 – who of them has time to snooze? Life is too busy, and we often stretch ourselves to party-filled booze nights or feverish cramming sessions. After all, sleep is something artists do, or bourgeoisie humanities students bereft of a 9am deadline. Yet sleep research highlights our misconception of those hours lost slumbering – Sleep is essential, with all animals participating in that REM/NREM cycle: fruit flies, birds and even dolphins (though in halves). The lack of it ties into problems ranging from obesity to mental illness, and impact on our ability to learn and emotionally process.</p>
 <br>
 <figure style="text-align:center;">
-  <a href="http://nendotan.deviantart.com/art/The-Crime-never-sleep-I-do-295428361">
+  <a href="https://nendotan.deviantart.com/art/The-Crime-never-sleep-I-do-295428361">
     <img src="images/the_crime_never_sleep__i_do_by_darkm4g-d4vw1zd.jpg" width="504" height="335" /></a>
     <figcaption> Photo by Nendotan, DeviantArt </figcaption>
 <figure>
@@ -30,7 +30,7 @@ author:
 <p>But - if you insist on partying through the night, at least take inspiration from some of our greatest dedicated nappers – Churchhill, Kennedy, Edison. Famous for their catnaps, they argued that regular rest amps up your performance ( - and students: if they happen to coincide with lectures? Well, as Albert Camus wrote – “Some people talk in their sleep. Lecturers talk while other people sleep.” But you didn’t hear that from me.)</p>
 <br>
 <figure style="text-align:center;">
-  <a href="http://www.flickr.com/photos/schani/43305287/">
+  <a href="https://www.flickr.com/photos/schani/43305287/">
     <img src="images/43305287_2d7c4a6f43_b.jpg" width="567" height="375" /></a>
     <figcaption>Photo by Michael Czeiszperger</figcaption>
 </figure>
