images in post preview

--- a/_posts/2012-11-16-animal-consciousness-part1.html
+++ b/_posts/2012-11-16-animal-consciousness-part1.html
@@ -18,6 +18,7 @@ meta:
   _oembed_27dc06254b871f1030ac75b046239804: '{{unknown}}'
   _oembed_a8bc3a9687b569349f0547d885290807: '{{unknown}}'
 author:
+image: alp.jpg
 ---
 <p style="text-align:right;"><em>Sidenote: Long break! Ouch. One-post a week minimum from now. (Challenge Accepted)</em></p>
 <p>So one of my favourite hobbies (particularly on days approaching deadlines &amp; work responsibilities) is the browsing of ncbi.</p>
