--- a/_posts/2012-11-23-are-your-actions-guided-by-logic-it-seems-not.html
+++ b/_posts/2012-11-23-are-your-actions-guided-by-logic-it-seems-not.html
@@ -23,6 +23,7 @@ meta:
   _oembed_0623c77c5d5e0174c5ae7abdf687317f: '{{unknown}}'
   _oembed_e1152961ce639e118d484d68cccc0ee3: '{{unknown}}'
 author:
+image: img_20121123_160204.jpg
 ---
 <p style="text-align:right;"><em>Not the cognizant kind, anyway.</em></p>
 <p>We all know first impressions can be remarkably shallow. Who hasn’t been in a pub and automatically picked out the smouldering shape of sexiness at the bar? Or equally immediately given a new co-worker the stink-eye because they've chosen some cringe-worthy combination of clothes to parade in? (<em>the kind of clothes you’d imagine your granddad donned as sexy war gear in blackadder-style transvestite fetishism</em>)</p>
