--- a/_posts/2012-11-26-neuromarketing-bit-of-a-hoax.html
+++ b/_posts/2012-11-26-neuromarketing-bit-of-a-hoax.html
@@ -29,6 +29,7 @@ meta:
   _oembed_95f24f8a52dc6c25456ac270220b8670: '{{unknown}}'
   _oembed_d960ecc9ee336babba147444c6df5c48: '{{unknown}}'
 author:
+image: 800px-eeg_recording.jpg
 ---
 <p>Whilst <strong>neuromarketing</strong> has often prominently featured in the media (getting into the brains of clients to subliminally seduce them into frivolity), a surprising lack of reviewed research lays a shoddy foundation. Back in 2010 a <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3152487/" target="_blank">review examined the research basis behind what profit-driven services were offering</a>. Out of <strong>16</strong> companies found to provide neuromarketing,<strong> 5</strong> didn’t employ academics, only<strong> 5 </strong>included academic research to back up their claims, and while <strong>9</strong> of these companies employed someone with an academic background, the techniques and technology described was generally non-specific <strong>waffle</strong> (with 3 providing no description whatsoever).</p>
 <br>
