--- a/_posts/2013-04-22-anxiety-and-stress-how-do-we-process-it.html
+++ b/_posts/2013-04-22-anxiety-and-stress-how-do-we-process-it.html
@@ -21,6 +21,7 @@ meta:
   _oembed_8fa215f0fcd8a2f1c78fd83271909458: '{{unknown}}'
   _oembed_107dd5f1542f7dc9878438754b661fd4: '{{unknown}}'
 author:
+image: anxiety.gif
 ---
 <p>While I submitted this to the OBR annual science writing competition, my mad dash in completing a fevered keyboard-dance a few hours before the competition deadline (having not pencilled it into my calendar, I got home from work to discover whilst browsing I had a few hours to submit something) leads me to suspect there'll be no accolades for this :)</p>
 <p><em>Particularly since I discovered that my post uncannily resembles one of th</em><em>e Nature articles I used to find the research papers I wanted. Alas - they are included below to compare. </em>But still - enjoy reading this hasty foray into the feedback loops of anxiety!</p>
