--- a/_posts/2013-04-28-bias-is-a-fickle-far-reaching-and-manipulative-beast.html
+++ b/_posts/2013-04-28-bias-is-a-fickle-far-reaching-and-manipulative-beast.html
@@ -21,6 +21,7 @@ meta:
   tagazine-media: a:7:{s:7:"primary";s:122:"https://deleresk.files.wordpress.com/2013/04/civil_rights_defence_demonstration_outside_victorian_liberal_party_offices.jpg";s:6:"images";a:1:{s:122:"https://deleresk.files.wordpress.com/2013/04/civil_rights_defence_demonstration_outside_victorian_liberal_party_offices.jpg";a:6:{s:8:"file_url";s:122:"https://deleresk.files.wordpress.com/2013/04/civil_rights_defence_demonstration_outside_victorian_liberal_party_offices.jpg";s:5:"width";i:2304;s:6:"height";i:1728;s:4:"type";s:5:"image";s:4:"area";i:3981312;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:1;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-04-29
     00:00:23";}
 author:
+image: civil_rights_defence_demonstration_outside_victorian_liberal_party_offices.jpg
 ---
 <p>What a terrible day: a day when I am lexically stumped and mentally stupefied. However, it was also the day for the Wellcome Trust / Guardian Science writing competition.</p>
 <p>Having made a complete hash of writing something before the day, and shedding a few facial expressions of despair and horror at my monstrous creation, I post the submission here in morbid loathing - the wordy boredom I created this late afternoon. Commiserations indeed.</p>
