--- a/_posts/2013-05-02-the-focus-in-architecture-design.html
+++ b/_posts/2013-05-02-the-focus-in-architecture-design.html
@@ -29,6 +29,7 @@ meta:
     width="630" height="945" frameborder="0" scrolling="no" webkitAllowFullScreen
     mozallowfullscreen allowFullScreen></iframe></div>
 author:
+image: tirana.png
 ---
 <p>“Why do I feel scared in some environments, but not in others?”</p>
 <p>For a while I thought the answer to this question was based entirely on events in that environment – say, a video-game shooting, an “ominous atmosphere” at a Church, or reckless drunks in the supermarket. However, it turns out that the sense of security we feel can in large part be determined by visibility and spatial layout of our environment, as well as subtle stressors for how an environment’s design affects interaction.</p>
