--- a/_posts/2013-05-31-prosthetics-has-sports-media-hyped-up-our-expectations.html
+++ b/_posts/2013-05-31-prosthetics-has-sports-media-hyped-up-our-expectations.html
@@ -27,6 +27,7 @@ meta:
     width="500" height="750" frameborder="0" scrolling="no" webkitAllowFullScreen
     mozallowfullscreen allowFullScreen></iframe></div>
 author:
+image: flickr-7349483742-hd.jpg
 ---
 <p><em><strong>If you had to lose your legs to save your unborn child – would you do it?</strong></em></p>
 <p>It’s one of those typical (and frankly preposterous) TV plots that demand a choice of disproportional improbability. A recent argument I had with my housemates involved the unlikely Private Practice-inspired decision of the exact dilemma above: if you were in a car crash whilst pregnant and only had time to save either your baby or your legs – which would you pick?</p>
