--- a/_posts/2013-08-14-frack-off-indeed.html
+++ b/_posts/2013-08-14-frack-off-indeed.html
@@ -20,6 +20,7 @@ meta:
   tagazine-media: a:7:{s:7:"primary";s:84:"https://deleresk.files.wordpress.com/2013/08/hydraulic_fracturing_marcellus_shale.jpg";s:6:"images";a:1:{s:84:"https://deleresk.files.wordpress.com/2013/08/hydraulic_fracturing_marcellus_shale.jpg";a:6:{s:8:"file_url";s:84:"https://deleresk.files.wordpress.com/2013/08/hydraulic_fracturing_marcellus_shale.jpg";s:5:"width";i:1024;s:6:"height";i:576;s:4:"type";s:5:"image";s:4:"area";i:589824;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:1;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-08-14
     07:48:28";}
 author:
+image: hydraulic_fracturing_marcellus_shale.jpg
 ---
 <blockquote><strong><a href="https://www.telegraph.co.uk/news/politics/10236664/We-cannot-afford-to-miss-out-on-shale-gas.html">“Fracking has the real potential to drive down energy bills”</a></strong></p></blockquote>
 <br>
