--- a/_posts/2013-10-07-building-sustainability.html
+++ b/_posts/2013-10-07-building-sustainability.html
@@ -13,6 +13,7 @@ published: true
 meta:
   _publicize_pending: '1'
 author:
+image: pdt_03.jpg
 ---
 <p style="text-align:right;"><em>Bit of a re-hash, but worth looking into associated links. Especially buildings created from wood - brilliant. </em></p>
 <p>In the same way that local filter bubbles can inhibit our capacity to interact with superior internet specimens (see Eli Pariser’s TED talk from 2011), local architecture changes how we feel and behave in our neighbourhood. As anyone who has ever been a newcomer in a city, you'll have been thrown into that environment which is topologically different to before, with different microbes, smells, air currents, pollution levels, artistic inspirations. Your behaviour changes, as does your health.</p>
