--- a/_posts/2013-10-23-if-you-break-it-you-buy-it.html
+++ b/_posts/2013-10-23-if-you-break-it-you-buy-it.html
@@ -16,6 +16,7 @@ published: true
 meta:
   _publicize_pending: '1'
 author:
+image: 412225441_e2b83dab88_o.jpg
 ---
 <p style="text-align:right;"><em>In UCL Pi newspaper, print edition. My unedited, unabbreviated version below: A rant on our government's uselessness Re climate change. </em></p>
 <p style="text-align:right;"><em>Woman up, world! Get the fuck up and start investing into greener sources.</em></p>
