--- a/_posts/2013-12-17-arguing-for-brain-machine-interfaces.html
+++ b/_posts/2013-12-17-arguing-for-brain-machine-interfaces.html
@@ -1,5 +1,5 @@
 ---
-
+image: 2717882808_36a978d096_o.jpg
 ---
 <p style="text-align:right;"><em>Written for Pi newspaper</em></p>
 <p>Amped up on scifi with films ranging from epics like Solaris to the big-time Hollywood hits Inception and Pacific Rim, it’s sometimes hard to distinguish fact from fiction. Interfacing devices with our brain to manipulate our environment is becoming less of a dream and more a way to capture capabilities otherwise inconceivable, bringing functionality to damaged bodies and bypassing a need for the sweat &amp; sinew of the brawn.</p>
