--- a/_posts/2013-05-23-kinesthetics.html
+++ b/_posts/2013-05-23-kinesthetics.html
@@ -19,6 +19,7 @@ meta:
   tagazine-media: a:7:{s:7:"primary";s:64:"https://deleresk.files.wordpress.com/2013/05/medical_students.jpg";s:6:"images";a:3:{s:71:"https://deleresk.files.wordpress.com/2013/05/8228670626_f26680b005_c.jpg";a:6:{s:8:"file_url";s:71:"https://deleresk.files.wordpress.com/2013/05/8228670626_f26680b005_c.jpg";s:5:"width";i:800;s:6:"height";i:600;s:4:"type";s:5:"image";s:4:"area";i:480000;s:9:"file_path";b:0;}s:64:"https://deleresk.files.wordpress.com/2013/05/medical_students.jpg";a:6:{s:8:"file_url";s:64:"https://deleresk.files.wordpress.com/2013/05/medical_students.jpg";s:5:"width";i:1600;s:6:"height";i:1200;s:4:"type";s:5:"image";s:4:"area";i:1920000;s:9:"file_path";b:0;}s:65:"https://deleresk.files.wordpress.com/2013/05/tango-entre-homme.jpg";a:6:{s:8:"file_url";s:65:"https://deleresk.files.wordpress.com/2013/05/tango-entre-homme.jpg";s:5:"width";i:1529;s:6:"height";i:991;s:4:"type";s:5:"image";s:4:"area";i:1515239;s:9:"file_path";b:0;}}s:6:"videos";a:0:{}s:11:"image_count";i:3;s:6:"author";s:8:"41337109";s:7:"blog_id";s:8:"41914604";s:9:"mod_stamp";s:19:"2013-05-23
     13:37:41";}
 author:
+image: 8228670626_f26680b005_c.jpg
 ---
 <blockquote><em>Dancing is not getting up any time painlessly like a speck of dust blown around in the wind. Dancing is when you rise above both worlds, tearing your heart to pieces and giving up your soul.</em><em><span style="font-family:Garamond, Times, serif;"><br />
 </span>- Mevlana Jalaluddin Rumi -</em></p></blockquote>
