--- a/_posts/2013-10-05-the-city-never-sleeps-but-we-need-to.html
+++ b/_posts/2013-10-05-the-city-never-sleeps-but-we-need-to.html
@@ -14,6 +14,7 @@ published: true
 meta:
   _publicize_pending: '1'
 author:
+image: the_crime_never_sleep__i_do_by_darkm4g-d4vw1zd.jpg
 ---
 <p style="text-align:right;"><em>Posted in UCL Pi magazine, my original version unedited:</em></p>
 <p>We’ve been brought up to believe sleep is a necessary but avoidable luxury – Watching Grey’s Anatomy, Mad Men, 24 – who of them has time to snooze? Life is too busy, and we often stretch ourselves to party-filled booze nights or feverish cramming sessions. After all, sleep is something artists do, or bourgeoisie humanities students bereft of a 9am deadline. Yet sleep research highlights our misconception of those hours lost slumbering – Sleep is essential, with all animals participating in that REM/NREM cycle: fruit flies, birds and even dolphins (though in halves). The lack of it ties into problems ranging from obesity to mental illness, and impact on our ability to learn and emotionally process.</p>
