add img site.url path

--- a/_posts/2013-04-26-abstract-concepts.html
+++ b/_posts/2013-04-26-abstract-concepts.html
@@ -10,7 +10,7 @@ tags: [green, white]
 <p>Now Qualia is a somewhat abstract concept in itself. It is the idea of subjective conscious experience – the taste of red wine, the colour of a turquoise sea. A property that can only be understood by direct experience – the unique individual moment of apprehending something via your consciousness. Arguments in this field say that experiencing some qualia – say, your nose being tickled by a buttercup – can’t be dissected by reductionist science, but instead reflects the subjective quality, the ‘what it’s <i>like</i> to feel your nose tickled’ aspect of consciousness.</p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/3809460658_3d36d44eaa_z.jpg" width="630" height="585" />
+  <img src="{{ site.baseurl }}/assets/images/3809460658_3d36d44eaa_z.jpg" width="630" height="585" />
 </figure>
 </br>
 <p>This kind of concept can be likened to the concept of freedom. It encompasses a wide range of ideas, emotions and experiences. It’s vague, and doesn’t just have one action or physical reality to underpin it: just as the concept of qualia might be “whether a duck experiences the qualia of it’s pond” or “how I feel sitting here writing about it”, freedom can be “the ability of Obama to move his little big toe”, “a historical perspective of African slavery” or “my qualia of sitting here feeling free to think what I choose”. It is abstract.</p>
@@ -20,7 +20,7 @@ tags: [green, white]
 <p>A sidestep from all this, let us return to the field of abstract concepts. How we do we process a concept that doesn’t have a concrete physical manifestation, when we attribute emotional links and memories as part of its definition? How do we see freedom? Or how do we feel it/hear it/imagine it?</p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/download.jpg" width="256" height="183" />
+  <img src="{{ site.baseurl }}/assets/images/download.jpg" width="256" height="183" />
 </figure>
 </br>
 <p>By scanning the brains of numerous victims whilst haranguing them with words, there is an answer (of sorts). Like most things, abstract concepts are also grounded in sensorymotor experiences. Though we might expect an abstract concept to show an elaborate weave of connections in the brain – for example we may expect ‘power’ to resonate through emotional processing, abstract thinking, logic and motor to reflect ideas such as ‘self-powerless’, ‘banking’ and ‘lift’, in actuality such large terms are placed into small boxes, in the context of their utterance.</p>
