--- a/_posts/2013-04-28-bias-is-a-fickle-far-reaching-and-manipulative-beast.html
+++ b/_posts/2013-04-28-bias-is-a-fickle-far-reaching-and-manipulative-beast.html
@@ -11,7 +11,7 @@ tags: [orange, brown]
 <p>- -</p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/civil_rights_defence_demonstration_outside_victorian_liberal_party_offices.jpg" width="585" height="439" />
+  <img src="{{ site.baseurl }}/assets/images/civil_rights_defence_demonstration_outside_victorian_liberal_party_offices.jpg" width="585" height="439" />
 </figure>
 </br>
 <p>If you ask a scientist their idea of bias, they may mention statistical probabilities. If you ask an immigrant about bias, they may describe how culture enforces a lifestyle. As a Russian scientist I experience both, and am constantly fascinated by their often surprising and unexpected reach. Not only does bias extend from the recent protests on sexism (Slut Walks), benefit-cuts (Cameron effigies) or drug-trials (the voice of Ben Goldacre). Bias proliferates through research, human interaction and down to the very way we converse.</p>
