--- a/_posts/2013-05-23-kinesthetics.html
+++ b/_posts/2013-05-23-kinesthetics.html
@@ -14,7 +14,7 @@ tags: [black, red]
 <br>
 <figure style="text-align:center;">
   <a href="https://www.flickr.com/photos/taylorandayumi/">
-    <img src="/bolyche/assets/images/8228670626_f26680b005_c.jpg" width="455" height="342" /></a>
+    <img src="{{ site.baseurl }}/assets/images/8228670626_f26680b005_c.jpg" width="455" height="342" /></a>
     <figcaption>Pele by Taylorandayumi <figcaption>
 </figure>
 </br>
@@ -23,7 +23,7 @@ tags: [black, red]
 <br>
 <figure style="text-align:center;">
   <a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Medical_Students.jpg">
-    <img src="/bolyche/assets/images/medical_students.jpg" width="520" height="390" /></a>
+    <img src="{{ site.baseurl }}/assets/images/medical_students.jpg" width="520" height="390" /></a>
 </figure>
 </br>
 <p>&nbsp;</p>
@@ -33,7 +33,7 @@ tags: [black, red]
 <br>
 <figure style="text-align:center;">
   <a href="httpss://upload.wikimedia.org/wikipedia/commons/9/99/Tango-entre-homme.jpg">
-    <img src="/bolyche/assets/images/tango-entre-homme.jpg" width="520" height="337" /></a>
+    <img src="{{ site.baseurl }}/assets/images/tango-entre-homme.jpg" width="520" height="337" /></a>
 </figure>
 </br>
 <p>&nbsp;</p>
