--- a/_posts/2012-11-16-animal-consciousness-part1.html
+++ b/_posts/2012-11-16-animal-consciousness-part1.html
@@ -10,7 +10,7 @@ tags: [green, brown]
 <p>So one of my favourite hobbies (particularly on days approaching deadlines &amp; work responsibilities) is the browsing of ncbi.</p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/alp.jpg" height="545" width="545" />
+  <img src="{{ site.baseurl }}/assets/images/alp.jpg" height="545" width="545" />
 </figure>
 </br>
 <p>It’s one of those excellent websites where either academics &lt;sleep-deprived PhDs&gt;  find their work linked for all its glory, or blasé word-browsers amuse themselves in knowing the latest about “<a href="https://www.ncbi.nlm.nih.gov/pubmed/22643207" target="_blank">orchestra hallucination via whiplash</a>” or “<a href="https://www.sciencedirect.com/science/article/pii/S0736467912008918" target="_blank">unusual spoon swallowing</a>” (don’t ask me how I searched that - googling ‘”foreign body insertion” makes me sound...well. shall we say, <i>suspicious</i>)</p>
@@ -18,19 +18,19 @@ tags: [green, brown]
 <p>Searching “animal consciousness” gives a surprisingly sparse list of resulting papers – it circles around appropriate-sounding titles such as “<a href="https://www.ncbi.nlm.nih.gov/pubmed/22925839" target="_blank">biology and quantum hypotheses</a>” (on-topic if a little pretentious to QM), to “<a href="https://www.ncbi.nlm.nih.gov/pubmed/22895637" target="_blank">a catholic evaluation of..</a>” (a reading point where I stop analysing and look into my soul) - to my favourite, simply entitled “<a href="https://www.cell.com/current-biology/retrieve/pii/S096098221200320X" target="_blank">Qualia</a>” as if biology by design is to be thus redefined in philosophical terms with a bit of Wittgensteinian charm thrown in.</p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/img_20121116_165005.jpg" height="545" width="545" />
+  <img src="{{ site.baseurl }}/assets/images/img_20121116_165005.jpg" height="545" width="545" />
 </figure>
 </br>
 <p>Sure they’re all centred on consciousness – a miasmal field if any can be so described – but few of them fittingly qualify exactly when we deem an organism to possess consciousness, and what external markers are truly representative of this. We could descend into <strong>philosophical arguments</strong> – Many of you dabblers would have read all about the mind-body problem, the typical<strong> Chinese room or philosophical zombie idea</strong>. Perhaps you've even read some David Chalmers or been thoroughly fired up exploring Locke (<em>especially if like me, you came across him in <strong>Sophie’s World</strong> as a kid and experienced complete mystery</em>).</p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/img_20121116_164404.jpg" height="545" width="545" />
+  <img src="{{ site.baseurl }}/assets/images/img_20121116_164404.jpg" height="545" width="545" />
 </figure>
 </br>
 <p>You’ll have experienced snippets of such ideas in Fox’s Dollhouse – what is consciousness when the human has been fully reduced to a <em>tabula rasa</em>?</p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/img_20121116_165359.jpg" height="545" width="545" />
+  <img src="{{ site.baseurl }}/assets/images/img_20121116_165359.jpg" height="545" width="545" />
 </figure>
 </br>
 <p>Or equally pondered AI emergence –</p>
@@ -41,7 +41,7 @@ tags: [green, brown]
 <p><strong>Or discount a chipmunk because they lost a game of tic-tac-toe (assuming we challenged him in the first place)...</strong></p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/img_20121116_165824.jpg" height="545" width="545" />
+  <img src="{{ site.baseurl }}/assets/images/img_20121116_165824.jpg" height="545" width="545" />
 </figure>
 </br>
 <p>We live in a world where we consume – consumerism is the primary economic mover – the rabid hoarding of oil and natural resources, of land for our mass crops and animal farming, of money for our market manipulation. Medicine has advanced to such an extent that we see 60 or 70 as an age of little fear (excepting a top-heavy age distribution increasing retirement age).</p>
@@ -54,7 +54,7 @@ tags: [green, brown]
 <p>Their views point out that <strong>human and animal consciousness should be deemed EQUAL</strong>. Lack of human-comprehensible verbal communication or complex rational reasoning doesn’t exclude then from feeling, thinking, requiring stimulation, seeing themselves – possessing self-consciousness. Just consider even the tip of our animal-mishandling iceberg – fishing. <strong>Mass, cruel wastage of life</strong> – caught, left to die on deck, and thrown back into the sea (disrupting the web’s ecosystem and distribution as seen <a href="https://www.springerlink.com/content/l50822x4w6770178/" target="_blank">here </a>and <a href="https://icesjms.oxfordjournals.org/content/68/1/221.short" target="_blank">here</a>). This extends to out handling within kitchens (who thought throwing live lobsters into boiling water is fine?) and animal farming and breeding.</p>
 <br>
 <figure style="text-align:center;">
-  <img src="/bolyche/assets/images/flickr-4475401498-hd.jpg" height="408" width="545" />
+  <img src="{{ site.baseurl }}/assets/images/flickr-4475401498-hd.jpg" height="408" width="545" />
 </figure>
 </br>
 <p>Future posts: I’ll look at this shit in more detail. Warning: There may be more cartoons involved. &amp; Ideas!</p>
